k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: org-management
  labels:
    name: org-management
    app: organization-management-service
